[gd_scene load_steps=11 format=3 uid="uid://dqjtsajvgf5a"]

[ext_resource type="Script" uid="uid://cbd4dyw1htvyi" path="res://Escenas/mapa.gd" id="1_qxxan"]
[ext_resource type="Texture2D" uid="uid://dra6g8blhtxud" path="res://Sprites/mapa.jpg" id="2_qxxan"]
[ext_resource type="Texture2D" uid="uid://cty4qukf715j" path="res://Imagenes/maga/imgaen (3).png" id="3_6maiu"]
[ext_resource type="AudioStream" uid="uid://di45b1ofdnwl1" path="res://Musica/buttonClickCut.mp3" id="4_vcmc4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vcmc4"]
texture = ExtResource("3_6maiu")
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eibdt"]
texture = ExtResource("3_6maiu")
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nrv1i"]
texture = ExtResource("3_6maiu")
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxxan"]
bg_color = Color(0.580392, 0.737255, 1, 0)
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20
shadow_color = Color(0.623529, 0.760784, 0.996078, 0.6)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6maiu"]
bg_color = Color(0.580392, 0.737255, 1, 0)
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20
shadow_color = Color(0.701961, 0.847059, 0.996078, 1)
shadow_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcmc4"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0)
shadow_size = 20

[node name="Mapa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qxxan")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qxxan")
expand_mode = 1

[node name="Volver" type="Button" parent="."]
layout_mode = 0
offset_left = 543.0
offset_top = 9.0
offset_right = 733.0
offset_bottom = 67.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_vcmc4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eibdt")
theme_override_styles/normal = SubResource("StyleBoxTexture_nrv1i")
text = "Volver"

[node name="primernivel" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 54.0
offset_right = 406.0
offset_bottom = 343.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.129412, 0.129412, 0.129412, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_qxxan")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6maiu")
theme_override_styles/normal = SubResource("StyleBoxFlat_vcmc4")

[node name="segundonivel" type="Button" parent="."]
layout_mode = 0
offset_left = 812.0
offset_top = 51.0
offset_right = 1234.0
offset_bottom = 351.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.129412, 0.129412, 0.129412, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_qxxan")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6maiu")
theme_override_styles/normal = SubResource("StyleBoxFlat_vcmc4")

[node name="tercernivel" type="Button" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 423.0
offset_right = 609.0
offset_bottom = 710.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.129412, 0.129412, 0.129412, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_qxxan")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6maiu")
theme_override_styles/normal = SubResource("StyleBoxFlat_vcmc4")

[node name="cuartonivel" type="Button" parent="."]
layout_mode = 0
offset_left = 811.0
offset_top = 406.0
offset_right = 1232.0
offset_bottom = 690.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.129412, 0.129412, 0.129412, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_qxxan")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6maiu")
theme_override_styles/normal = SubResource("StyleBoxFlat_vcmc4")

[node name="clickButton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vcmc4")

[connection signal="pressed" from="Volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="primernivel" to="." method="_on_primernivel_pressed"]
[connection signal="pressed" from="segundonivel" to="." method="_on_segundonivel_pressed"]
[connection signal="pressed" from="tercernivel" to="." method="_on_tercernivel_pressed"]
[connection signal="pressed" from="cuartonivel" to="." method="_on_cuartonivel_pressed"]
